@@ -108,6 +108,9 @@ Version 1.5.2 - CVS
     of supported authentication mechanisms is disabled, if IO::Socket is not
     available.
   - Removed HTTP Status header from signout page (#1424748).
+  - config_default.php is loaded before site configuration file.
+    config_local.php overrides are removed from config.php and loaded by
+    main initiation script.
 
 Version 1.5.1 (branched on 2006-02-12)
 --------------------------------------
